--- a/engelsk.html
+++ b/engelsk.html
@@ -1,1 +1,18 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+<head>
+	<title>engelsk</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
+
+<body>
+	<div class="overskrift">
+		<h1>Nea</h1>
+	</div>
+
+	<div class="sprakBilde">
+		<a href="index.html"><img src="images/norway.png"></a>
+	</div>
+
+</body>
+</html>
