--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 
 <head>
+	<title>Norsk Forside</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
+	<div class="overskrift">
+		<h1>Nea</h1>
+	</div>
+
+	<div class="sprakBilde">
+		<a href="engelsk.html"><img src="images/united-kingdom.png"></a>
+	</div>
+
 </body>
 </html>
