--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
 </head>
 
 <body>
-	<div class="overskrift">
-		<h1>Nea</h1>
+	<div class="sprakBilde">
+		<a href="engelsk.html"><img src="images/united-kingdom.png" alt="English"></a>
+	</div>
+	
+	<div class="bakgrunn1">
+		<div class="overskrift">
+			<h1>Nea</h1>
+		</div>
 	</div>
 
-	<div class="sprakBilde">
-		<a href="engelsk.html"><img src="images/united-kingdom.png"></a>
+	<div class="bakgrunn2">
+
 	</div>
+
+	
 
 </body>
 </html>
