--- a/engelsk.html
+++ b/engelsk.html
@@ -11,7 +11,7 @@
 	</div>
 
 	<div class="sprakBilde">
-		<a href="index.html"><img src="images/norway.png"></a>
+		<a href="index.html"><img src="images/norway.png" alt="Norsk"></a>
 	</div>
 
 </body>
