--- a/engelsk.html
+++ b/engelsk.html
@@ -2,17 +2,55 @@
 <html>
 <head>
 	<title>engelsk</title>
+	
+	<meta charset="utf-8">
+
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
-	<div class="overskrift">
-		<h1>Nea</h1>
+	<div class="sprakBilde">
+		<a href="index.html"><img src="images/norway.png" alt="English"></a>
 	</div>
 
-	<div class="sprakBilde">
-		<a href="index.html"><img src="images/norway.png" alt="Norsk"></a>
+	<div class="overskrift1">
+
+			<h1>NéA</h1>
+
+		</div>
+
+	<div class="bakgrunn1">
+
+		
+
 	</div>
+
+	<div class="bakgrunn2">
+
+		<div class="tekstboks1">
+			
+			<p>lorem bullshit fyll inn noe</p>
+
+		</div>
+
+	</div>
+
+	<div class="bakgrunn3">
+		
+		<div class="tekstboks2">
+			
+			<p>lorem bullshit fyll inn noe</p>
+
+		</div>
+
+	</div>
+
+	
+
+</body>
 
 </body>
 </html>
