--- a/index.html
+++ b/index.html
@@ -5,20 +5,43 @@
 	<title>Norsk Forside</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 	<div class="sprakBilde">
 		<a href="engelsk.html"><img src="images/united-kingdom.png" alt="English"></a>
 	</div>
-	
-	<div class="bakgrunn1">
-		<div class="overskrift">
-			<h1>Nea</h1>
+
+	<div class="overskrift1">
+
+			<h1>NéA</h1>
+
 		</div>
+
+	<div class="bakgrunn1">
+
+		
+
 	</div>
 
 	<div class="bakgrunn2">
+
+		<div class="tekstboks1">
+			
+			<p>lorem bullshit fyll inn noe</p>
+
+		</div>
+
+	</div>
+
+	<div class="bakgrunn3">
+		
+		<div class="tekstboks2">
+			
+			<p>lorem bullshit fyll inn noe</p>
+
+		</div>
 
 	</div>
 
