--- a/engelsk.html
+++ b/engelsk.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-	<title>engelsk</title>
+	<title>engelsk forside</title>
 	
 	<meta charset="utf-8">
 
@@ -12,8 +13,11 @@
 </head>
 
 <body>
+
 	<div class="sprakBilde">
+
 		<a href="index.html"><img src="images/norway.png" alt="English"></a>
+
 	</div>
 
 	<div class="overskrift1">
