--- a/engelsk.html
+++ b/engelsk.html
@@ -18,11 +18,15 @@
 
 		<ul>
 			 
-			<li><a href=""><h1>Overskrift</h1></a></li>
+			<li><a href=""><h1>To the top</h1></a></li>
 
-			<li><a href=""><h1>Innledning</h1></a></li>
+			<li><a href=""><h1>The Problem</h1></a></li>
 
-			<li><a href=""><h1>Avsluttning</h1></a></li> 
+			<li><a href=""><h1>The Solution</h1></a></li> 
+
+			<li><a href=""><h1>The App</h1></a></li> 
+
+			<li><a href=""><h1>About Us</h1></a></li> 
 
 		</ul>
 
