--- a/engelsk.html
+++ b/engelsk.html
@@ -18,11 +18,11 @@
 
 		<ul>
 			 
-			<li><a href=""><h1>Overskrift</h1></a></li>
+			<li><a href=""><h1>The problem</h1></a></li>
 
-			<li><a href=""><h1>Innledning</h1></a></li>
+			<li><a href=""><h1>Solution</h1></a></li>
 
-			<li><a href=""><h1>Avsluttning</h1></a></li> 
+			<li><a href=""><h1>The app</h1></a></li> 
 
 		</ul>
 
