--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 
 		</ul>
 
+		<div class="knapp">
+			
+			<button type="button" id="btnStyle">Style</button>
+
+		</div>
+
 		<div class="sprakBilde">
 
 			<a href="engelsk.html"><img src="images/united-kingdom.png" alt="English"></a>
@@ -82,7 +88,23 @@
 
 	</div>
 
-	
-
 </body>
+
+<footer>
+	
+<div class="footer">
+	
+	<ul>
+		
+		<li>Elin Holde  Studentnummer: ------</li>
+		<li>Jørgen Huseby  Studentnummer: ------</li>
+		<li>Fredrik Randers  Studentnummer: ------</li>
+		<li>Jostein Hauge  Studentnummer: S333943</li>
+
+	</ul>
+
+</div>
+
+</footer>
+
 </html>
