--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 		
 		<li>Elin Holde  Studentnummer: ------</li>
 		<li>Jørgen Huseby  Studentnummer: ------</li>
-		<li>Fredrik Randers  Studentnummer: ------</li>
-		<li>Jostein Hauge  Studentnummer: S333943</li>
+		<li>Fredrik Randers  Studentnummer: s333919</li>
+		<li>Jostein Hauge  Studentnummer: s333943</li>
 
 	</ul>
 
