--- a/index_ss.html
+++ b/index_ss.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>norsk_alternativ</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
 </head>
 <body>
+	
 
 </body>
 </html>
