--- a/engelsk.html
+++ b/engelsk.html
@@ -92,5 +92,22 @@
 
 </body>
 
-</body>
+<footer>
+	
+<div class="footer">
+	
+	<ul>
+		
+		<li>Elin Holde  Studentnummer: s333939</li>
+		<li>Jørgen Huseby  Studentnummer: s333932</li>
+		<li>Fredrik Randers  Studentnummer: s333919</li>
+		<li>Jostein Hauge  Studentnummer: s333943</li>
+
+	</ul>
+
+</div>
+
+</footer>
+
+
 </html>
