--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 	
 	<ul>
 		
-		<li>Elin Holde  Studentnummer: ------</li>
-		<li>Jørgen Huseby  Studentnummer: ------</li>
+		<li>Elin Holde  Studentnummer: s333939</li>
+		<li>Jørgen Huseby  Studentnummer: s333932</li>
 		<li>Fredrik Randers  Studentnummer: s333919</li>
 		<li>Jostein Hauge  Studentnummer: s333943</li>
 
