--- a/engelsk.html
+++ b/engelsk.html
@@ -32,6 +32,12 @@
 
 		</ul>
 
+		<div class="knapp">
+			
+			<a href="engelsk_ss.html"><button type="button" id="btnStyle">Style</button></a>
+
+		</div>
+
 		<div class="sprakBilde">
 
 			<a href="index.html"><img src="images/norway.png" alt="English"></a>
