--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -24,9 +24,15 @@
 
 		</ul>
 
+		<div class="knapp">
+			
+			<a href="engelsk.html"><button type="button" id="btnStyle">Style</button></a>
+
+		</div>
+
 		<div class="sprakBilde">
 
-			<a href="index.html"><img src="images/norway.png" alt="English"></a>
+			<a href="index_ss.html"><img src="images/norway.png" alt="English"></a>
 
 		</div>
 
