--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div class="knapp">
 			
-			<button type="button" id="btnStyle">Style</button>
+			<a href="index_ss.html"><button type="button" id="btnStyle">Style</button></a>
 
 		</div>
 
@@ -98,14 +98,14 @@
 	
 <div class="footer">
 	
-	<ul>
+	<ol>
 		
 		<li>Elin Holde  Studentnummer: s333939</li>
 		<li>Jørgen Huseby  Studentnummer: s333932</li>
 		<li>Fredrik Randers  Studentnummer: s333919</li>
 		<li>Jostein Hauge  Studentnummer: s333943</li>
 
-	</ul>
+	</ol>
 
 </div>
 
