--- a/index_ss.html
+++ b/index_ss.html
@@ -23,13 +23,13 @@
 
 		<div class="knapp">
 			
-			<button type="button" id="btnStyle">Style</button>
+			<a href="index.html"></a><button type="button" id="btnStyle">Style</button></a>
 
 		</div>
 
 		<div class="sprakBilde">
 
-			<a href="engelsk.html"><img src="images/united-kingdom.png" alt="English"></a>
+			<a href="engelsk_ss.html"><img src="images/united-kingdom.png" alt="English"></a>
 
 		</div>
 
