--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -3,6 +3,8 @@
 <head>
 	<title>english_alternativ</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
