--- a/index_ss.html
+++ b/index_ss.html
@@ -29,7 +29,7 @@
 
 		<div class="sprakBilde">
 
-			<a href="engelsk_ss.html"><img src="images/united-kingdom.png" alt="English"></a>
+			<a href="engelsk_ss.html"><img src="images/EN_yellow.png" alt="English"></a>
 
 		</div>
 
