--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -32,7 +32,7 @@
 
 		<div class="sprakBilde">
 
-			<a href="index_ss.html"><img src="images/norway.png" alt="English"></a>
+			<a href="index_ss.html"><img src="images/NO_yellow.png" alt="Norsk"></a>
 
 		</div>
 
