--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<div class="sprakBilde">
 
-			<a href="engelsk.html"><img src="images/united-kingdom.png" alt="English"></a>
+			<a href="engelsk.html"><img src="images/EN_white.png" alt="English"></a>
 
 		</div>
 
