--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
 
 <body>
 	<div class="navbar">
-		<ul>
 
-			<li><a href="overskrift1"><h1>Til Toppen</h1></a></li> 
+		<div class="navbarmeny">
+
+			<ul>
+
+				<li><a href="overskrift1"><h1>Til Toppen</h1></a></li> 
 			 
-			<li><a href="tekstboks1"><h1>Problemet</h1></a></li>
+				<li><a href="tekstboks1"><h1>Problemet</h1></a></li>
 
-			<li><a href="tekstboks2"><h1>Løsningen</h1></a></li>
+				<li><a href="tekstboks2"><h1>Løsningen</h1></a></li>
 
-			<li><a href="tekstboks3"><h1>Appen</h1></a></li> 
+				<li><a href="tekstboks3"><h1>Appen</h1></a></li> 
 
-			<li><a href=""><h1>Om oss</h1></a></li> 
+				<li><a href=""><h1>Om oss</h1></a></li> 
 
-		</ul>
+			</ul>
+
+	</div>
 
 		<div class="knapp">
 			
