--- a/engelsk.html
+++ b/engelsk.html
@@ -40,7 +40,7 @@
 
 		<div class="sprakBilde">
 
-			<a href="index.html"><img src="images/NO_white.png" alt="Norsk"></a>
+			<a href="index.html"><img class="bildeKnapp" src="images/NO_white.png" alt="Norsk"></a>
 
 		</div>
 
