--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -34,7 +34,7 @@
 
 		<div class="sprakBilde">
 
-			<a href="index_ss.html"><img src="images/NO_yellow.png" alt="Norsk"></a>
+			<a href="index_ss.html"><img class="bildeKnapp" src="images/NO_yellow.png" alt="Norsk"></a>
 
 		</div>
 
