--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -28,7 +28,7 @@
 
 		<div class="knapp">
 			
-			<a href="engelsk.html"><button type="button" id="btnStyle">Style</button></a>
+			<a href="engelsk.html"><img class="styleKnapp" src="Style_yellow.png" alt="English"></a>
 
 		</div>
 
