--- a/index_ss.html
+++ b/index_ss.html
@@ -25,7 +25,7 @@
 
 		<div class="knapp">
 			
-			<a href="index.html"></a><button type="button" id="btnStyle">Style</button></a>
+			<a href="index.html"><img class="styleKnapp" src="Style_yellow.png" alt="English"></a>
 
 		</div>
 
