--- a/engelsk.html
+++ b/engelsk.html
@@ -34,7 +34,7 @@
 
 		<div class="knapp">
 			
-			<a href="engelsk_ss.html"><button type="button" id="btnStyle">Style</button></a>
+			<a href="engelsk_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="English"></a>
 
 		</div>
 
