--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<div class="knapp">
 			
-			<a href="index_ss.html"><img class="styleKnapp" src="Style_white.png" alt="English"></a>
+			<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="Kontrast"></a>
 
 		</div>
 
