--- a/index_ss.html
+++ b/index_ss.html
@@ -25,7 +25,7 @@
 
 		<div class="knapp">
 			
-			<a href="index.html"><img class="styleKnapp" src="Style_yellow.png" alt="English"></a>
+			<a href="index.html"><img class="styleKnapp" src="images/Style_yellow.png" alt="normal"></a>
 
 		</div>
 
