--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 			</ul>
 
-	</div>
+		</div>
 
 		<div class="knapp">
 			
-			<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="Kontrast"></a>
+			<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="normal"></a>
 
 		</div>
 
