--- a/engelsk.html
+++ b/engelsk.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<title>engelsk forside</title>
+	<title>English Frontpage</title>
 	
 	<meta charset="utf-8">
 
