--- a/index_ss.html
+++ b/index_ss.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="no">
 <head>
-	<title>norsk_alternativ</title>
+	<title>Norsk Alternativ</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
 
