--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>english_alternativ</title>
+	<title>English alternative</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
