--- a/index.html
+++ b/index.html
@@ -13,7 +13,35 @@
 </head>
 
 <body>
-	<div class="navbar">
+	<table>
+		<tbody>
+			<tr class="nabbar">
+				<td>
+					<a href="#top"><h1>Til Toppen</h1></a>
+				</td>
+				<td>
+					<a href="#problemet"><h1>Problemet</h1></a>
+				</td>
+				<td>
+					<a href="#løsningen"><h1>Løsningen</h1></a>
+				</td>
+				<td>
+					<a href="#appen"><h1>Appen</h1></a>
+				</td>
+				<td>
+					<a href="#omoss"><h1>Om oss</h1></a>
+				</td>
+				<td>
+					<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="normal"></a>
+				</td>
+				<td>
+					<a href="engelsk.html"><img class="bildeKnapp" src="images/EN_white.png" alt="English"></a>
+				<td>
+					
+			</tr>
+		</tbody>
+	</tavle>
+	<!--<div class="navbar">
 
 		<div class="navbarmeny">
 
@@ -45,7 +73,7 @@
 
 		</div>
 
-	</div>
+	</div>-->
 
 	<div class="overskrift1">
 
