--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<table>
 		<tbody>
-			<tr class="nabbar">
+			<tr class="navbar">
 				<td>
 					<a href="#top"><h1>Til Toppen</h1></a>
 				</td>
@@ -32,48 +32,14 @@
 					<a href="#omoss"><h1>Om oss</h1></a>
 				</td>
 				<td>
-					<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="normal"></a>
+					<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
 				</td>
 				<td>
-					<a href="engelsk.html"><img class="bildeKnapp" src="images/EN_white.png" alt="English"></a>
-				<td>
-					
+					<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
+				</td>	
 			</tr>
 		</tbody>
-	</tavle>
-	<!--<div class="navbar">
-
-		<div class="navbarmeny">
-
-			<ul>
-
-				<li><a href="#top"><h1>Til Toppen</h1></a></li> 
-			 
-				<li><a href="#problemet"><h1>Problemet</h1></a></li>
-
-				<li><a href="#løsningen"><h1>Løsningen</h1></a></li>
-
-				<li><a href="#appen"><h1>Appen</h1></a></li> 
-
-				<li><a href="#omoss"><h1>Om oss</h1></a></li> 
-
-			</ul>
-
-		</div>
-
-		<div class="knapp">
-			
-			<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="normal"></a>
-
-		</div>
-
-		<div class="sprakBilde">
-
-			<a href="engelsk.html"><img class="bildeKnapp" src="images/EN_white.png" alt="English"></a>
-
-		</div>
-
-	</div>-->
+	</table>
 
 	<div class="overskrift1">
 
