--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -1,13 +1,15 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>English alternative</title>
+
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+
 </head>
 <body>
-
+<!--
 	<div class="navbar">
 
 		<ul>
@@ -39,7 +41,36 @@
 		</div>
 
 	</div>
+-->
 
+<table>
+		<tbody>
+			<tr class="nabbar">
+				<td>
+					<a href="#top"><h1>Top</h1></a>
+				</td>
+				<td>
+					<a href="#problemet"><h1>Problem</h1></a>
+				</td>
+				<td>
+					<a href="#løsningen"><h1>Solution</h1></a>
+				</td>
+				<td>
+					<a href="#appen"><h1>The App</h1></a>
+				</td>
+				<td>
+					<a href="#omoss"><h1>About</h1></a>
+				</td>
+				<td>
+					<a href="index_ss.html"><img class="styleKnapp" src="images/Style_yellow.png" alt="normal"></a>
+				</td>
+				<td>
+					<a href="index.html"><img class="bildeKnapp" src="images/NO_yellow.png" alt="English"></a>
+				<td>
+					
+			</tr>
+		</tbody>
+	</table>
 	
 	<div class="overskrift1">
 
