--- a/engelsk.html
+++ b/engelsk.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+<!--
 	<div class="navbar">
 
 		<ul>
@@ -45,6 +45,36 @@
 		</div>
 
 	</div>
+	--->
+
+	<table>
+		<tbody>
+			<tr class="nabbar">
+				<td>
+					<a href="#top"><h1>Top</h1></a>
+				</td>
+				<td>
+					<a href="#problemet"><h1>Problem</h1></a>
+				</td>
+				<td>
+					<a href="#løsningen"><h1>Solution</h1></a>
+				</td>
+				<td>
+					<a href="#appen"><h1>The App</h1></a>
+				</td>
+				<td>
+					<a href="#omoss"><h1>About</h1></a>
+				</td>
+				<td>
+					<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="normal"></a>
+				</td>
+				<td>
+					<a href="index.html"><img class="bildeKnapp" src="images/NO_white.png" alt="English"></a>
+				<td>
+					
+			</tr>
+		</tbody>
+	</table>
 
 	
 	<div class="overskrift1">
