--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="no">
 
 <head>
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
 
@@ -40,7 +40,7 @@
 					
 			</tr>
 		</tbody>
-	</tavle>
+	</table>
 	<!--<div class="navbar">
 
 		<div class="navbarmeny">
