--- a/index_ss.html
+++ b/index_ss.html
@@ -1,13 +1,14 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="no">
 <head>
 	<title>Norsk Alternativ</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet_alternativt.css">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+	<!---
 		<div class="navbar">
 		<ul>
 
@@ -35,7 +36,36 @@
 
 		</div>
 
-	</div>
+	</div> -->
+
+	<table>
+		<tbody>
+			<tr class="nabbar">
+				<td>
+					<a href="#top"><h1>Til Toppen</h1></a>
+				</td>
+				<td>
+					<a href="#problemet"><h1>Problemet</h1></a>
+				</td>
+				<td>
+					<a href="#løsningen"><h1>Løsningen</h1></a>
+				</td>
+				<td>
+					<a href="#appen"><h1>Appen</h1></a>
+				</td>
+				<td>
+					<a href="#omoss"><h1>Om oss</h1></a>
+				</td>
+				<td>
+					<a href="index.html"><img class="styleKnapp" src="images/Style_yellow.png" alt="normal"></a>
+				</td>
+				<td>
+					<a href="engelsk_ss.html"><img class="bildeKnapp" src="images/EN_yellow.png" alt="English"></a>
+				<td>
+					
+			</tr>
+		</tbody>
+	</table>
 
 	<div class="overskrift1">
 
