--- a/index.html
+++ b/index.html
@@ -13,34 +13,40 @@
 </head>
 
 <body>
-	<table>
-		<tbody>
-			<tr class="navbar">
-				<td>
-					<a href="#top"><h1>Til Toppen</h1></a>
-				</td>
-				<td>
-					<a href="#problemet"><h1>Problemet</h1></a>
-				</td>
-				<td>
-					<a href="#løsningen"><h1>Løsningen</h1></a>
-				</td>
-				<td>
-					<a href="#appen"><h1>Appen</h1></a>
-				</td>
-				<td>
-					<a href="#omoss"><h1>Om oss</h1></a>
-				</td>
-				<td>
-					<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
-				</td>
-				<td>
-					<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
-				</td>	
-			</tr>
-		</tbody>
-	</table>
-
+	<nav>
+		<table>
+			<tbody>
+				<tr class="navbar">
+					<td>
+						<a href="#top"><h1>Til Toppen</h1></a>
+					</td>
+					<td>
+						<a href="#problemet"><h1>Problemet</h1></a>
+					</td>
+					<td>
+						<a href="#løsningen"><h1>Løsningen</h1></a>
+					</td>
+					<td>
+						<a href="#appen"><h1>Appen</h1></a>
+					</td>
+					<td>
+						<a href="#omoss"><h1>Om oss</h1></a>
+					</td>
+					<td>
+						<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
+					</td>
+					<td>
+						<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
+					</td>	
+				</tr>
+			</tbody>
+		</table>
+		<select>
+			<option value="" selected="selected">Select</option> 
+    		<option value="#top">Til Toppen</option> 
+    		<option value="#problemet">Problemet</option> 
+		</select>
+	</nav>
 	<div class="overskrift1">
 
 			<h1><a name=”top”>NéA</a></h1>
