--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<<<<<<< HEAD
+
 	<table>
 		<tbody>
 			<tr class="nabbar">
@@ -42,44 +42,8 @@
 					
 			</tr>
 		</tbody>
-	</tavle>
-	<!--<div class="navbar">
+	</table>
 
-		<div class="navbarmeny">
-
-			<ul>
-
-				<li><a href="#top"><h1>Til Toppen</h1></a></li> 
-			 
-				<li><a href="#problemet"><h1>Problemet</h1></a></li>
-
-				<li><a href="#løsningen"><h1>Løsningen</h1></a></li>
-
-				<li><a href="#appen"><h1>Appen</h1></a></li> 
-
-				<li><a href="#omoss"><h1>Om oss</h1></a></li> 
-
-			</ul>
-
-		</div>
-
-		<div class="knapp">
-			
-			<a href="index_ss.html"><img class="styleKnapp" src="images/Style_white.png" alt="normal"></a>
-
-		</div>
-
-		<div class="sprakBilde">
-
-			<a href="engelsk.html"><img class="bildeKnapp" src="images/EN_white.png" alt="English"></a>
-
-		</div>
-
-	</div>-->
-
-	
-
-=======
 	<nav>
 		<table>
 			<tbody>
@@ -120,7 +84,7 @@
   	</span>
 		</select>
 	</nav>
->>>>>>> 92a3b56b089f5f9e3c1bba9bab12c3fdd5b8f9a2
+
 	<div class="overskrift1">
 
 			<h1><a name=”top”>NéA</a></h1>
