Masse dritbra dritt

--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
 		<span>
 			<table>
 				<tbody>
-					<tr>
-						<span class="dropdown" id="limit">
-  							<img class="dropbtn" src="images/Hamburger_white.png" alt="Menu" tabindex="2"></button>
+					<tr class="navbar">
+						<td>
+							<span class="dropdown" id="limit">
+  								<img class="dropbtn" src="images/Hamburger_white.png" alt="Menu" tabindex="2"></button>
   				
-  							<span class="dropdown-content">
-    							<a href="#top" tabindex="3">Til Toppen</a>
-    							<a href="#problemet" tabindex="4">Problemet</a>
-    							<a href="#løsningen" tabindex="5">Løsningen</a>
+  								<span class="dropdown-content">
+    								<a href="#top" tabindex="3">Til Toppen</a>
+    								<a href="#problemet" tabindex="4">Problemet</a>
+    								<a href="#løsningen" tabindex="5">Løsningen</a>
+  								</span>
   							</span>
-  						</span>
+  						</td>
   					</tr>
   				</tbody>
   			</table>
