--- a/engelsk.html
+++ b/engelsk.html
@@ -19,19 +19,19 @@
 				<tbody>
 					<tr class="navbar">
 						<td>
-							<a href="#top"><h1>Til Toppen</h1></a>
+							<a href="#top"><h1>Top</h1></a>
 						</td>
 						<td>
-							<a href="#problemet"><h1>Problemet</h1></a>
+							<a href="#problemet"><h1>The problem</h1></a>
 						</td>
 						<td>
-							<a href="#løsningen"><h1>Løsningen</h1></a>
+							<a href="#løsningen"><h1>The solution</h1></a>
 						</td>
 						<td>
-							<a href="#appen"><h1>Appen</h1></a>
+							<a href="#appen"><h1>The app</h1></a>
 						</td>
 						<td>
-							<a href="#omoss"><h1>Om oss</h1></a>
+							<a href="#omoss"><h1>About us</h1></a>
 						</td>
 						<td>
 							<a href="engelsk_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
