--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<tbody>
 					<tr class="navbar">
 						<td>
-							<a href="#top"><h1>Til Toppen</h1></a>
+							<a href="#top"><h1>Hjem</h1></a>
 						</td>
 						<td>
 							<a href="#problemet"><h1>Problemet</h1></a>
@@ -31,7 +31,7 @@
 							<a href="#appen"><h1>Appen</h1></a>
 						</td>
 						<td>
-							<a href="#omoss"><h1>Om oss</h1></a>
+							<a href="#omoss"><h1>Om</h1></a>
 						</td>
 						<td>
 							<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
