--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <body>
 	<h2>Dette er ene test for å se sm script fungerer</h2>
 	<p id="fontid">Hei dette er en test</p>
-	<p id="fontid2">Hei dette er en test</p>
+	
 
 	
 
@@ -15,7 +15,7 @@
 
 	<script>
 		function fontFunction20(){
-			document.getElementById("fontid","fontid2").style.fontSize="23px"
+			document.getElementById("fontid").style.fontSize="23px"
 		}
 	</script>
 
