--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="no">
 
 <head>
@@ -31,7 +31,7 @@
 							<a href="#appen"><h1>Appen</h1></a>
 						</td>
 						<td>
-							<a href="#omoss"><h1>Om</h1></a>
+							<a href="#omoss"><h1>Om oss</h1></a>
 						</td>
 						<td>
 							<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
@@ -49,6 +49,7 @@
 					<tr class="navbar">
 						<td>
 							<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
+
 						</td>
 						<td>
 							<span class="dropdown">
@@ -65,9 +66,11 @@
 							<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
 						</td>
   					</tr>
+					
   				</tbody>
   			</table>
   		</span>
+
   		
 	</nav>
 	
