--- a/test.html
+++ b/test.html
@@ -11,11 +11,17 @@
 
 	
 
-	<button type="button" onclick="fontFunction20()">Større</button>
+	<button type="button" onclick="fontFunction23()">Større</button>
+	<button type="button" onclick="fontFunctionReset()">Reset</button>
+
+
 
 	<script>
-		function fontFunction20(){
+		function fontFunction23(){
 			document.getElementById("fontid").style.fontSize="23px"
+		}
+		function fontFunctionReset(){
+			document.getElementById("fontid").style.fontSize="15px"
 		}
 	</script>
 
