--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
 	<title>Norsk Forside</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+	<script type="text/javascript">
+		
+		function fontFunctionStor(){
+			document.getElementById("tekstboks1").style.fontSize="23px"
+		}
+		function fontFunctionReset(){
+			document.getElementById("tekstboks1").style.fontSize="15px"
+		}
+		function fontFunctionStor2(){
+			document.getElementById("tekstboks2").style.fontSize="23px"
+		}
+		function fontFunctionReset2(){
+			document.getElementById("tekstboks2").style.fontSize="15px"
+		}
+		function fontFunctionStor3(){
+			document.getElementById("tekstboks3").style.fontSize="23px"
+		}
+		function fontFunctionReset3(){
+			document.getElementById("tekstboks3").style.fontSize="15px"
+		}
+
+	</script>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -73,26 +97,34 @@
 				</a></tr>
 				
 				<tr><a name="problemet">
-					<p class="tekstboks1">
+					<p id="tekstboks1">
 						Problemet: 
 						<br><br>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br><br>
+						<button type="button" onclick="fontFunctionStor()">Større tekst</button>
+						<button type="button" onclick="fontFunctionReset()">Reset tekst</button>
 					</p>
-				</a></tr>
+				</a>
+						
+			</tr>
 
 				<tr><a name="løsningen">
-					<p class="tekstboks2">
+					<p id="tekstboks2">
 						Løsningen: 
 						<br><br>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br><br>
+						<button type="button" onclick="fontFunctionStor2()">Større tekst</button>
+						<button type="button" onclick="fontFunctionReset2()">Reset tekst</button>
 					</p>
 				</a></tr>
 
 				<tr><a name="appen">
-					<p class="tekstboks3">
+					<p id="tekstboks3">
 						Appen: 
 						<br><br>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br><br>
+						<button type="button" onclick="fontFunctionStor3()">Større tekst</button>
+						<button type="button" onclick="fontFunctionReset3()">Reset tekst</button>
 					</p>
 				</a></tr>
 			</tbody>
