--- a/index.html
+++ b/index.html
@@ -9,40 +9,47 @@
 	<script type="text/javascript">
 		
 		function dropdownFunction() {
-  var x = document.getElementById("ddContent");
+  			var x = document.getElementById("ddContent");
  	
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
+  		if (x.style.display === "block") {
+    			x.style.display = "none";
+			} 
+			else {
+    			x.style.display = "block";
+  			}
+		}
 		function fontFunctionStor(){
 			document.getElementById("tekstboks1").style.fontSize="23px"
 		}
+
 		function fontFunctionReset(){
 			document.getElementById("tekstboks1").style.fontSize="15px"
 		}
+
 		function fontFunctionStor2(){
 			document.getElementById("tekstboks2").style.fontSize="23px"
 		}
+
 		function fontFunctionReset2(){
 			document.getElementById("tekstboks2").style.fontSize="15px"
 		}
+
 		function fontFunctionStor3(){
 			document.getElementById("tekstboks3").style.fontSize="23px"
 		}
+
 		function fontFunctionReset3(){
 			document.getElementById("tekstboks3").style.fontSize="15px"
 		}
+
 		function fontFunctionStor4(){
 			document.getElementById("tekstboks4").style.fontSize="23px"
 		}
+
 		function fontFunctionReset4(){
 			document.getElementById("tekstboks4").style.fontSize="15px"
 		}
-
-
+		
 	</script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
