--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		function fontFunctionReset4(){
 			document.getElementById("tekstboks4").style.fontSize="15px"
 		}
-		
+
 	</script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -117,7 +117,8 @@
 			<tbody>
 				<tr><a name="hjem">
 					<h1 class="overskrift">NéA</h1>
-				</a></tr>
+					</a>
+				</tr>
 				
 				<tr><a name="problemet">
 					<p id="tekstboks1">
@@ -140,8 +141,9 @@
 					</p>
 				</a>
 			</tr>
-				<td>
-				<tr><a name="appen">
+				
+				<tr class="tekstBakgrunn"><td>
+					<a name="appen">
 					<p id="tekstboks3">
 						Appen: 
 						<br><br>
@@ -161,14 +163,20 @@
 						<button type="button" onclick="fontFunctionStor3()">Større tekst</button>
 						<button type="button" onclick="fontFunctionReset3()">Reset tekst</button>
 					</p>
-				</td>
-				<td>
+				</a>
+			</td>
+			<td>
 					<div class="bildeAppen">
-						<img src="" class="bilde1">
+						<img src="images/App_side1.png" class="bilde1">
 					</div>
 				</td>
-				</a>
-			</tr>
+
+				</tr>
+				<tr class="tekstBakgrunn">
+						<div class="bildeAppen2">
+							<img src="images/App_side1.png" class="bilde2">
+						</div>
+					</tr>
 
 				<tr><a name="omoss">
 					<p id="tekstboks4">
