--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 				</td>
 				<td>
 					<ul>
-						<li><a href=""></a>Kildeliste</li>
+						<li><a ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
+						<br>
+						<li><a href="Design_manual_test.pdf" target="_blank">Designmanual</a></li>
 					</ul>
 				</td>
 				<td>
