--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 			<tr>
 				<td>
 					<p>
-						copyrigth
+						Copyright © 2018 Elin Holde, Fredrik Thorsen, Jørgen Huseby, Jostein Hauge. All rights reserved.
 					</p>
 				</td>
 				<td>
