liten late night mekk av index ss og alternativ css

--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿OCTYPE html>
 <html lang="en">
 <head>
 	<title>English alternative</title>
@@ -9,39 +9,6 @@
 
 </head>
 <body>
-<!--
-	<div class="navbar">
-
-		<ul>
-			 
-
-			<li><a href=""><h1>To the top</h1></a></li>
-
-			<li><a href=""><h1>The Problem</h1></a></li>
-
-			<li><a href=""><h1>The Solution</h1></a></li> 
-
-			<li><a href=""><h1>The App</h1></a></li> 
-
-			<li><a href=""><h1>About Us</h1></a></li> 
-
-
-		</ul>
-
-		<div class="knapp">
-			
-			<a href="engelsk.html"><img class="styleKnapp" src="images/Style_yellow.png" alt="Normal"></a>
-
-		</div>
-
-		<div class="sprakBilde">
-
-			<a href="index_ss.html"><img class="bildeKnapp" src="images/NO_yellow.png" alt="Norsk"></a>
-
-		</div>
-
-	</div>
--->
 
 <table>
 		<tbody>
