--- a/index_ss.html
+++ b/index_ss.html
@@ -92,6 +92,12 @@
 								</span>
   							</span>			
 						</td>
+						<td>
+							<a href="index.html"><img class="knapp" src="images/Style_yellow.png" alt="normal"></a>
+						</td>
+						<td>
+							<a href="engelsk_ss.html"><img class="knapp" src="images/EN_yellow.png" alt="English"></a>
+						</td>
                         <td>
                             <img class="knapp" src="images/Text_size_yellow.png" alt="Text size" onclick="fontFunctionStor()">
                         </td>
@@ -164,7 +170,7 @@
 		<table class="footertable">	
 			<tr>
 				<td>
-					<p>
+					<p class="copyright">
 						Copyright © 2018<br> Elin Holde, Fredrik Thorsen,<br> Jørgen Huseby, Jostein Hauge.<br> All rights reserved.
 					</p>
 				</td>
@@ -178,7 +184,7 @@
 				<td>
 					<div class="someKnapper">
 						<a href="https://www.facebook.com"><img class="someFB" src="images/Facebook_yellow.png" alt="Facebook"><a/>
-						<a href="https://www.instagram.com"><img class="someInsta" src="images/Insta_wyellow.png" alt="Instagram"><a/>
+						<a href="https://www.instagram.com"><img class="someInsta" src="images/Insta_yellow.png" alt="Instagram"><a/>
 						<a href="https://www.linkedin.com"><img class="someLinkedin" src="images/Linkedin_yellow.png" alt="Linkedin"><a/>
 						<a href="https://www.twitter.com"><img class="someTwitter" src="images/Twitter_yellow.png" alt="Twitter"><a/>
 					</div>
