--- a/test.html
+++ b/test.html
@@ -108,19 +108,19 @@ img {vertical-align: middle;}
 
 <div class="mineSider fade">
   <div class="nummertxt">1 / 3</div>
-  <img src="images/App_side1.png" style="width:100%">
+  <img src="images/App_no_1.png" style="width:100%">
   <div class="text">Appbilde 1</div>
 </div>
 
 <div class="mineSider fade">
   <div class="nummertxt">2 / 3</div>
-  <img src="images/polarizationgif.gif" style="width:100%">
+  <img src="images/App_no_2" style="width:100%">
   <div class="text">Appbilde 2</div>
 </div>
 
 <div class="mineSider fade">
   <div class="nummertxt">3 / 3</div>
-  <img src="images/united-kingdom.png" style="width:100%">
+  <img src="images/App_no_3" style="width:100%">
   <div class="text">Appbilde 3</div>
 </div>
 
