--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Norsk Forside</title>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 	<script type="text/javascript">
@@ -43,6 +44,8 @@
 
 		function plusSide(n) {
 		  visSide(sideIndex += n);
+            document.getElementsByClassName("mineSider1").style.display="none"
+            
 		}
 
 		function currentSide(n) {
@@ -53,8 +56,12 @@
 		  var i;
 		  var sider = document.getElementsByClassName("mineSider");
 		  var dots = document.getElementsByClassName("dot");
-		  if (n > sider.length) {sideIndex = 1}    
-		  if (n < 1) {sideIndex = sider.length}
+		  if (n > sider.length) {
+              sideIndex = 1
+          }    
+		  if (n < 1) {
+              sideIndex = sider.length
+          }
 		  for (i = 0; i < sider.length; i++) {
 		      sider[i].style.display = "none";  
 		  }
@@ -67,7 +74,7 @@
 
 	</script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 </head>
 
 <body>
