alt tagg til bilder

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<a name="problemet">
                     <div class="grid-container tekstboks1">
                         <div>
-					       <img src="images/polarizationgif.gif" class="gif" >
+					       <img src="images/polarizationgif.gif" class="gif" alt="The polarization of the american public between 1994-2014">
                             
                         </div>
                         <div >
@@ -209,7 +209,7 @@
 					</p>
                         </div>
                         <div>
-                        <img name="appBilde" width="200px" class="appBilder">
+                        <img name="appBilde" width="200px" class="appBilder" alt="Appen NeA">
                     </div>
                     </div>
 				</a>
