--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
                 function noJs(){
             document.getElementById("noJsBilde1").style.display="none";
             document.getElementById("noJsBilde2").style.display="none";            
-            document.getElementById("noJsBilde3").style.display="none";               
+            document.getElementById("noJsBilde3").style.display="none";
+            
+            document.getElementById("storKnapp1").style.display="none";
+            document.getElementById("storKnapp2").style.display="none";
 
         }
             function startUp(){
@@ -114,7 +117,8 @@
 							<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
 						</td>
                         <td>
-                        	<img class="knapp" src="images/Text_size_white.png" onclick="fontFunctionStor()" alt="Text size" >
+                        	<img id="storKnappJs1" class="knapp" src="images/Text_size_white.png" onclick="fontFunctionStor()" alt="Text size">
+                            <a href="norskStor.html" id="storKnapp1"><img class="knapp" src="images/Text_size_white.png"  alt="Text size"></a>
                         </td>
 					</tr>
 				</tbody>
@@ -144,7 +148,8 @@
 							<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
 						</td>
                         <td>
-                            <img class="knapp" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()">
+                            <img id="storKnappJs2" class="knapp" src="images/Text_size_white.png" alt="Text size" onclick="fontFunctionStor()" >
+                            <a href="norskStor.html" id="storKnapp2"><img class="knapp" src="images/Text_size_white.png" alt="Text size"></a>
                         </td>
   					</tr>
   				</tbody>
@@ -217,6 +222,7 @@
 				<a name="appen">
                     <div class="grid-container tekstboks3">
                         <div> 
+                            
 					<p>
 						Appen: 
 						<br><br>
