--- a/engelskStor.html
+++ b/engelskStor.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 	<title>engelskStor</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+	<script type="text/javascript" src="script.js"></script>
+
+	
 </head>
 <body>
 
