--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                         <div>
                         <img name="appBilde" width="200px" class="appBilder" alt="Appen NeA" id="jsAppBilde">
                             <div class="noJsBilder">
-                            <img src="images/App_no_1.png" id="noJsBilde1" width="150px" >
-                            <img src="images/App_no_2.png" id="noJsBilde2" width="150px" >
-                            <img src="images/App_no_3.png" id="noJsBilde3" width="150px" >
+                            <img src="images/App_no_1.png" id="noJsBilde1" width="150px" alt="Bilde av appens forside" >
+                            <img src="images/App_no_2.png" id="noJsBilde2" width="150px" alt="Bilde av appens tidslinje">
+                            <img src="images/App_no_3.png" id="noJsBilde3" width="150px" alt="Bilde av forstørret nyhetssak">
                             </div>
                     </div>
                     </div>
