--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<a href="#omoss"><h1>Om oss</h1></a>
 						</td>
 						<td>
-							<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal"></a>
+							<a href="norsk_ss.html"><img class="knapp" src="images/Style_white.png" alt="høyKontrast"></a>
 						</td>
 						<td>
 							<a href="engelsk.html"><img class="knapp" src="images/EN_white.png" alt="English"></a>
@@ -64,7 +64,7 @@
   							</span>			
 						</td>
 						<td>
-							<a href="index_ss.html"><img class="knapp" src="images/Style_white.png" alt="normal" ></a>
+							<a href="norsk_ss.html"><img class="knapp" src="images/Style_white.png" alt="høyKontrast" ></a>
 							
   						</td>
   						<td>
