siste for dagen (Lørdan)

--- a/index.html
+++ b/index.html
@@ -199,32 +199,30 @@
 </body>
 
 <footer>
-	<div class="footer">
-		<table class="footertable">	
-			<tr>
-				<td>
+	<div class="grid-containerFooter footer">
+			
+			
+				<div>
 					<p>
 						Copyright © 2018<br> Elin Holde, Fredrik Thorsen,<br> Jørgen Huseby, Jostein Hauge.<br> All rights reserved.
 					</p>
-				</td>
-				<td>
+				</div>
+				<div>
 					<ul>
 						<li><a ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
 						<br>
 						<li><a href="Design_manual_test.pdf" target="_blank">Designmanual</a></li>
 					</ul>
-				</td>
-				<td>
+				</div>
+				
 					<div class="someKnapper">
-						<a href="https://www.facebook.com"><img class="someFB" src="images/Facebook_white.png" alt="Facebook"><a/>
-						<a href="https://www.instagram.com"><img class="someInsta" src="images/Insta_white.png" alt="Instagram"><a/>
-						<a href="https://www.linkedin.com"><img class="someLinkedin" src="images/Linkedin_white.png" alt="Linkedin"><a/>
-						<a href="https://www.twitter.com"><img class="someTwitter" src="images/Twitter_white.png" alt="Twitter"><a/>
-					</div>
-				</td>
-			</tr>
-		</table>
-	</div>
-</footer>
-
+						<a href="https://www.facebook.com"><img class="someFB" src="images/Facebook_white.png" alt="Facebook"></a>
+						<a href="https://www.instagram.com"><img class="someInsta" src="images/Insta_white.png" alt="Instagram"></a>
+						<a href="https://www.linkedin.com"><img class="someLinkedin" src="images/Linkedin_white.png" alt="Linkedin"></a>
+						<a href="https://www.twitter.com"><img class="someTwitter" src="images/Twitter_white.png" alt="Twitter"></a>
+                            
+                    </div>
+    </div>
+    </footer>
 </html>
+
