--- a/index.html
+++ b/index.html
@@ -79,9 +79,13 @@
   			</table>
   		</span>	
 	</nav>
-		
+		  <div class="overskrift">
 				<a name="hjem">
-					<h1 class="overskrift">NéA</h1>
+					<h2>NéA</h2>
+                    
+                    <a href="https://www.apple.com/no/ios/app-store/"><img src="images/Download_AppStore_black_NO.png" class="lastNed"></a>
+                    <a href="https://play.google.com/store"><img src="images/Download_GooglePlay_black_NO.png" class="lastNed"></a>
+                        </div>
 				</a>
 				
 				<a name="problemet">
