--- a/norsk_ss.html
+++ b/norsk_ss.html
@@ -178,7 +178,7 @@
 					<ul>
 						<li><a ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
 						<br>
-						<li><a href="Design_manual_test.pdf" target="_blank">Designmanual</a></li>
+						<li><a href="Design_manual.pdf" target="_blank">Designmanual</a></li>
 					</ul>
 				</td>
 				<td>
