--- a/index.html
+++ b/index.html
@@ -180,14 +180,12 @@
 				<a name="omoss">
                     <div class ="grid-container tekstboks4">
                         <div>
-					   <p>
-							Om oss: 
-				
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+					   <p id="skriftS6">
+							Bilder av oss
                         </p>
                         </div>
                         <div>
-                        <p>
+                        <p id="skriftS7">
                         	Elin Holde  Studentnummer: s333939
 							Jørgen Huseby  Studentnummer: s333932
 							Fredrik Randers  Studentnummer: s333919
