--- a/engelskStor.html
+++ b/engelskStor.html
@@ -34,10 +34,10 @@
 							<a href="#omoss"><h1>About us</h1></a>
 						</td>
 						<td>
-							<a href="engelsk_style_Stor"><img class="knapp" src="images/Style_white.png" alt="High Contrast"></a>
+							<a href="engelsk_style_Stor.html"><img class="knapp" src="images/Style_white.png" alt="High Contrast"></a>
 						</td>
 						<td>
-							<a href="norskStor.html"><img class="knapp" src="images/NO_white.png" alt="Norsk"></a>
+							<a href="norskStor.html"><img class="knapp" src="images/NO_yellow.png" alt="Norsk"></a>
 						</td>
                         <td>
                         	<img id="storKnappJs1" class="knapp" src="images/Text_size_white.png" alt="Text size">
