--- a/norsk_style_Stor.html
+++ b/norsk_style_Stor.html
@@ -37,7 +37,7 @@
 							<a href="norskStor.html"><img class="knapp" src="images/Style_yellow.png" alt="Norsk stor størrelse normal style"></a>
 						</td>
 						<td>
-							<a href="engelskStor.html"><img class="knapp" src="images/EN_yellow.png" alt="English stor tekst"></a>
+							<a href="engelsk_style_Stor.html"><img class="knapp" src="images/EN_yellow.png" alt="English stor tekst"></a>
 						</td>
                         <td>
                         	<img id="storKnappJs1" class="knapp" src="images/Text_size_yellow.png" alt="Tekst størrelse">
