--- a/engelsk_ss.html
+++ b/engelsk_ss.html
@@ -72,7 +72,7 @@
 						</td>
                         <td>
                             <img id="storKnappJs2" class="knapp" src="images/Text_size_yellow.png" alt="Text size" onclick="fontFunctionStor()" >
-                            <a href="engelsk.html" id="storKnapp2"><img class="knapp" src="images/Text_size_yellow.png" alt="Text size"></a>
+                            <a href="engelsk_style_Stor.html" id="storKnapp2"><img class="knapp" src="images/Text_size_yellow.png" alt="Text size"></a>
                         </td>
   					</tr>
   				</tbody>
