--- a/norsk_ss.html
+++ b/norsk_ss.html
@@ -37,11 +37,11 @@
 							<a href="index.html"><img class="knapp" src="images/Style_yellow.png" alt="normal style"></a>
 						</td>
 						<td>
-							<a href="engelsk.html"><img class="knapp" src="images/EN_yellow.png" alt="English"></a>
+							<a href="engelsk_ss.html"><img class="knapp" src="images/EN_yellow.png" alt="English"></a>
 						</td>
                         <td>
                         	<img id="storKnappJs1" class="knapp" src="images/Text_size_yellow.png" onclick="fontFunctionStor()" alt="Text size">
-                            <a href="norskStor.html" id="storKnapp1"><img class="knapp" src="images/Text_size_yellow.png"  alt="Text size"></a>
+                            <a href="norsk_style_Stor.html" id="storKnapp1"><img class="knapp" src="images/Text_size_yellow.png"  alt="Text size"></a>
                         </td>
 					</tr>
 				</tbody>
