--- a/norsk_style_Stor.html
+++ b/norsk_style_Stor.html
@@ -41,7 +41,7 @@
 						</td>
                         <td>
                         	<img id="storKnappJs1" class="knapp" src="images/Text_size_yellow.png" alt="Tekst størrelse">
-                            <a href="norskStor.html" id="storKnapp1"><img class="knapp" src="images/Text_size_yellow.png" alt="Tekst størrelse"></a>
+                            <a href="norsk_ss.html" id="storKnapp1"><img class="knapp" src="images/Text_size_yellow.png" alt="Tekst størrelse"></a>
                         </td>
 					</tr>
 				</tbody>
