--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 	
 			<div class="listeDiv">
 					<ul>
-						<li><a ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
+						<li class="kildeliste"><a ref="Kildeliste.pdf" target="_blank">Kildeliste</a></li>
 						<br>
-						<li><a href="Design_manual.pdf" target="_blank">Designmanual</a></li>
+						<li class="designmanual"><a href="Design_manual.pdf" target="_blank">Designmanual</a></li>
 					</ul>
                     
                     
