--- a/engelsk_style_Stor.html
+++ b/engelsk_style_Stor.html
@@ -28,10 +28,10 @@
 							<a href="#løsningen"><h1>Solution</h1></a>
 						</td>
 						<td>
-							<a href="#appen"><h1>The App</h1></a>
+							<a href="#appen"><h1>App</h1></a>
 						</td>
 						<td>
-							<a href="#omoss"><h1>About us</h1></a>
+							<a href="#omoss"><h1>About</h1></a>
 						</td>
 						<td>
 							<a href="engelskStor.html"><img class="knapp" src="images/Style_yellow.png" alt="Normal style"></a>
