--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<tr class="navbar">
 						<td>
                             <span class="dropdown">
-  								<img class="dropbtn" src="images/Hamburger_white.png" alt="Menu" tabindex="2" onclick="dropdownFunction()">
+  								<img class="dropbtn" src="images/Hamburger_white.png" alt="Menu" tabindex="2" onclick="dropdownFunction()" onkeypress="dropdownFunction()">
   								<span id="ddContent" class="dropdown-content" >
    								 	<ul>
    								 		<li>
