--- a/index.html
+++ b/index.html
@@ -53,24 +53,15 @@
 					<tr class="navbar">
 						<td>
                             <span class="dropdown">
-  								<img class="dropbtn" src="images/Hamburger_white.png" alt="Menu" tabindex="2" onclick="dropdownFunction()" onkeypress="dropdownFunction()">
+  								<img class="dropbtn" src="images/Hamburger_white.png" alt="Menu" tabindex="1" onclick="dropdownFunction()" onkeypress="dropdownFunction()">
   								<span id="ddContent" class="dropdown-content" >
    								 	<ul>
-   								 		<li>
-   								 			<a href="#hjem" tabindex="3" onclick="dropdownFunction()" class="dropdownTekst">Til Toppen</a>
-    									</li>
-    									<li>
-    										<a href="#problemet" tabindex="4" onclick="dropdownFunction()">Problem</a>
-    									</li>
-    									<li>
-    										<a href="#løsningen" tabindex="5" onclick="dropdownFunction()">Løsning</a>
-   										</li>
-    									<li>
-   											<a href="#appen" tabindex="6" onclick="dropdownFunction()">Appen</a>
-    									</li>
-    									<li>
-    										<a href="#omoss" tabindex="7" onclick="dropdownFunction()">Om oss</a>
-										</li>
+   								 		<li><a href="#hjem" tabindex="2" onclick="dropdownFunction()" class="dropdownTekst">Til Toppen</a></li>
+    									<li><a href="#problemet" tabindex="3" onclick="dropdownFunction()">Problem</a></li>
+    									<li><a href="#løsningen" tabindex="4" onclick="dropdownFunction()">Løsning</a></li>
+    									<li><a href="#appen" tabindex="5" onclick="dropdownFunction()">Appen</a></li>
+    									<li><a href="#omoss" tabindex="6" onclick="dropdownFunction()">Om oss</a></li>
+										<li><a href="#exitmenu" tabindex="7" onclick="dropdownFunction()">Lukk Menyen</a></li>
 									</ul>
 								</span>
   							</span>			
