--- a/engelsk.html
+++ b/engelsk.html
@@ -172,7 +172,7 @@
                             
                         </div>
                         <div class="appDiv">
-                        <img name="appBilde" width="200px" class="appBilder" alt="Appen NeA" id="jsAppBilde">
+                        <img name="appBilde2" width="200px" class="appBilder" alt="The App NeA" id="jsAppBilde2">
                             <div class="noJsBilder">
                             <img src="images/App_eng_1.png" id="noJsBilde1" width="150px" alt="Image of App front page">
                             <img src="images/App_eng_2.png" id="noJsBilde2" width="150px" alt="Image of case timeline">
